add button to see all data whole

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -207,7 +207,8 @@
         <div class="upload-form">
           <a href="/upload" class="btn-primary">📤 Excel फ़ाइल अपलोड करें</a>
           <a href="/samanvayak-details" class="btn-primary">📑 समन्वयक विवरण</a>
-          <a href="/summary_all" class="btn-primary">📈 सभी तालिकाओं का सारांश</a>        
+          <a href="/summary_all" class="btn-primary">📈 सभी तालिकाओं का सारांश</a> 
+          <a href="/merge-view" class="btn-primary">सभी डेटा</a>         
           </div>
 
         {% if tables %}
