--- a/app/templates/merged_view.html
+++ b/app/templates/merged_view.html
@@ -203,7 +203,8 @@
             class="fullscreen-btn"
             title="फुल स्क्रीन"
           >
-            🖥️
+            🖥️ <br>
+            <span class="sr-only" style="font-size: 16px">Full Screen</span>
           </button>
         </div>
       </div>
