--- a/app/templates/summary_all.html
+++ b/app/templates/summary_all.html
@@ -132,7 +132,7 @@
       <table>
         <thead>
           <tr>
-            <th>📄 तालिका नाम</th>
+            <th>ज्योति कलश यात्रा रथ</th>
             <th>उपजोन</th>
             <th>जिले की संख्या</th>
             <th>तहसील की संख्या</th>
@@ -143,7 +143,7 @@
         <tbody>
           {% for row in summary %}
           <tr>
-            <td>{{ row.table_name }}</td>
+            <td>{{ row.table_name.replace('ज्योति_कलश_यात्रा_रथ_', '').replace('_', ' ') }}</td>
             {% if row.upzone %}
             <td>{{ row.upzone }}</td>
             {% else %}
